# crabtrics

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: access_logs.rs  main.rs  schema.rs
templates/: index.html
