[package]
name = "crabtrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
httparse = "1.8.0"
time = { version = "0.3.21", features = ["parsing"] }
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb/", branch = "main", features = [
    "local",
] }
libflate = "1.3.0"
interner = "0.1.1"
serde = { version = "1.0.162", features = ["derive"] }
askama = "0.12.0"
csv = "1.2.1"
