[package]
name = "crabtrics"
version = "0.1.0"
edition = "2021"


[dependencies]
httparse = "1.8.0"
anyhow = { version = "1.0.71", features = ["backtrace"] }
time = { version = "0.3.22", features = ["parsing", "serde"] }
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb/", branch = "main", features = [
    "local",
] }
libflate = "1.4.0"
interner = "0.2.0"
serde = { version = "1.0.164", features = ["derive"] }
askama = "0.12.0"
csv = "1.2.2"
